tests/lustre/typechecking/shouldFail/test_homeomorphic_exn.lus
type t = [int, int, bool];

node n2 (x, y: t) returns (z: [int, int, bool]);
let
z = x + y; -- this should fail, but doesn't
tel.